--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   },
   "homepage": "https://github.com/ECMGIU/PaymentPortal#readme",
   "dependencies": {
-    "@tailwindcss/ui": "^0.7.2"
+    "autoprefixer": "^10.1.0",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "http-server": "^0.12.3",
-    "postcss": "^8.1.7",
-    "postcss-cli": "^8.2.0",
-    "tailwindcss": "^1.9.6"
+    "postcss": "^8.2.1",
+    "postcss-cli": "^8.2.0"
   }
 }
